--- a/project/public/index.html
+++ b/project/public/index.html
@@ -3,10 +3,9 @@
 	<head>
 		<title>fail2</title>
 		<meta charset="utf-8" />
-
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="./style.css" />
 	</head>
-
 	<body>
 		<canvas id="canvas"></canvas>
 		<!-- WEBPACK will inject the bundle.js here -->
